// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AccordionSection renders correctly with required props 1`] = `
<div class="govuk-accordion__section section"
     data-testid="accordionSection"
     id="accordionSection"
>
  <div class="govuk-accordion__section-header">
    <h2 class="govuk-accordion__section-heading"
        id="section-test-heading"
    >
      <button aria-controls="accordionSection-content"
              aria-expanded="false"
              aria-label="Test heading, show this section"
              class="govuk-accordion__section-button"
              id="accordionSection-heading"
              type="button"
      >
        <span class="govuk-accordion__section-heading-text">
          <span data-testid="accordionSection-heading"
                class="govuk-accordion__section-heading-text-focus"
          >
            Test heading
          </span>
        </span>
        <span class="govuk-visually-hidden govuk-accordion__section-heading-divider">
          ,
        </span>
        <span class="govuk-accordion__section-toggle">
          <span class="govuk-accordion__section-toggle-focus">
            <span class="govuk-accordion-nav__chevron govuk-accordion-nav__chevron--down">
            </span>
            <span class="govuk-accordion__section-toggle-text">
              Show
            </span>
          </span>
        </span>
      </button>
    </h2>
  </div>
  <div class="govuk-accordion__section-content"
       id="accordionSection-content"
  >
    <p>
      Test content
    </p>
    <div class="govuk-!-display-none-print">
      <a href="#top"
         class="govuk-link govuk-link--no-visited-state"
      >
        Back to top
      </a>
    </div>
  </div>
</div>
`;

exports[`AccordionSection renders with caption 1`] = `
<div class="govuk-accordion__section section"
     data-testid="accordionSection"
     id="accordionSection"
>
  <div class="govuk-accordion__section-header">
    <h2 class="govuk-accordion__section-heading"
        id="section-test-heading"
    >
      <button aria-controls="accordionSection-content"
              aria-expanded="false"
              aria-label="Test heading, show this section"
              class="govuk-accordion__section-button"
              id="accordionSection-heading"
              type="button"
      >
        <span class="govuk-accordion__section-heading-text">
          <span data-testid="accordionSection-heading"
                class="govuk-accordion__section-heading-text-focus"
          >
            Test heading
          </span>
        </span>
        <span class="govuk-accordion__section-summary govuk-body">
          <span class="govuk-accordion__section-summary-focus">
            Some caption text
          </span>
        </span>
        <span class="govuk-visually-hidden govuk-accordion__section-heading-divider">
          ,
        </span>
        <span class="govuk-accordion__section-toggle">
          <span class="govuk-accordion__section-toggle-focus">
            <span class="govuk-accordion-nav__chevron govuk-accordion-nav__chevron--down">
            </span>
            <span class="govuk-accordion__section-toggle-text">
              Show
            </span>
          </span>
        </span>
      </button>
    </h2>
  </div>
  <div class="govuk-accordion__section-content"
       id="accordionSection-content"
  >
    <p>
      Test content
    </p>
    <div class="govuk-!-display-none-print">
      <a href="#top"
         class="govuk-link govuk-link--no-visited-state"
      >
        Back to top
      </a>
    </div>
  </div>
</div>
`;

exports[`AccordionSection renders with different heading size 1`] = `
<div class="govuk-accordion__section section"
     data-testid="accordionSection"
     id="accordionSection"
>
  <div class="govuk-accordion__section-header">
    <h3 class="govuk-accordion__section-heading"
        id="section-test-heading"
    >
      <button aria-controls="accordionSection-content"
              aria-expanded="false"
              aria-label="Test heading, show this section"
              class="govuk-accordion__section-button"
              id="accordionSection-heading"
              type="button"
      >
        <span class="govuk-accordion__section-heading-text">
          <span data-testid="accordionSection-heading"
                class="govuk-accordion__section-heading-text-focus"
          >
            Test heading
          </span>
        </span>
        <span class="govuk-visually-hidden govuk-accordion__section-heading-divider">
          ,
        </span>
        <span class="govuk-accordion__section-toggle">
          <span class="govuk-accordion__section-toggle-focus">
            <span class="govuk-accordion-nav__chevron govuk-accordion-nav__chevron--down">
            </span>
            <span class="govuk-accordion__section-toggle-text">
              Show
            </span>
          </span>
        </span>
      </button>
    </h3>
  </div>
  <div class="govuk-accordion__section-content"
       id="accordionSection-content"
  >
    <p>
      Test content
    </p>
    <div class="govuk-!-display-none-print">
      <a href="#top"
         class="govuk-link govuk-link--no-visited-state"
      >
        Back to top
      </a>
    </div>
  </div>
</div>
`;
